<resources>
    <string name="app_name">Academy Minsk Movie</string>
    <string name="film_title">Harry Potter and the philosopher\'s stone</string>
    <string name="released">Released:</string>
    <string name="released_date">November 4, 2001</string>
    <string name="movie_trailer">MOVIE TRAILER</string>
    <string name="overview">Overview:</string>
    <string name="film_description">Adaptation of the first of J.K. Rowling\'s popular children\'s novels about Harry
        Potter, a boy who learns on his eleventh birthday that he is the orphaned son of two powerful wizards and
        possesses unique magical powers of his own. He is summoned from his life as an unwanted child to become a
        student at Hogwarts, an English boarding school for wizards. There, he meets several friends who become his
        closest allies and help him discover the truth about his parents\' mysterious deaths.
    </string>
    <string name="fun_facts">Fun Facts</string>
    <string name="fun_facts_description">Harry\'s parents James and Lily are soulmates because the patronus charm (to ward off Dementors) is a physical representation of one’s soul. Because James\' is a stag and Lily\'s is a doe they are a perfect fit together. Because Professor Snape was in love with Lily, his patronus transformed into a doe when she died</string>
    <string name="coroutines_activity">Coroutines Activity</string>
    <string name="thread_handler_activity">Thread Handler Activity</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>

    <string name="coroutine_create">Create</string>
    <string name="coroutine_start">Start</string>
    <string name="coroutine_stop">Stop</string>
    <string name="fragment_coroutine_title">Coroutines activity</string>
    <string name="fragment_handler_exe_title">This is Thread Handler Activity</string>

    <string name="msg_oncreate">Coroutine created</string>
    <string name="msg_onstart">Coroutine Started</string>
    <string name="msg_oncancel">Coroutine cancelled</string>
    <string name="msg_should_create_task">Must click \"create\" task first</string>
    <string name="msg_thread_oncreate">Thread Task created</string>
    <string name="msg_thread_onstart">Thread Task Started</string>
    <string name="msg_thread_oncancel">Thread Task cancelled</string>
    <string name="msg_preexecute">Pre execute run</string>
    <string name="msg_postexecute">Post execute run</string>

    <string name="done">Done!</string>
    <string name="task_created">Job created</string>

    <string name="content_description_movie_backdrop">Movie Backdrop</string>
    <string name="content_description_movie_poster">Movie Poster</string>

    <string name="error_load_movies">Can\'t load movies: %1$s</string>
    <string name="error_load_trailer">Can\'t load trailer: %1$s</string>

</resources>
