<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.filmdetails.DetailsFragment">

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.3"
            android:scaleType="centerCrop"
            tools:src="@drawable/hp_banner_1"/>

        <ScrollView
            android:id="@+id/scrollViewDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBanner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgPreview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3"
                    tools:src="@drawable/hp_preview_fs" />

                <TextView
                    android:id="@+id/tvFilmTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="#6938B8"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgPreview"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/film_title" />

                <TextView
                    android:id="@+id/tvFilmReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/released"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imgPreview"
                    app:layout_constraintTop_toBottomOf="@+id/tvFilmTitle" />

                <TextView
                    android:id="@+id/tvRelData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/tvFilmReleased"
                    app:layout_constraintTop_toBottomOf="@+id/tvFilmTitle"
                    tools:text="@string/released_date" />

                <Button
                    android:id="@+id/btnTrailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/movie_trailer"
                    app:layout_constraintStart_toEndOf="@+id/imgPreview"
                    app:layout_constraintTop_toBottomOf="@+id/tvFilmReleased" />

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/overview"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgPreview" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    tools:text="@string/film_description"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>